--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Download the full repos and package to a zip for installation, or put the whole 
 /**
  * @version		1.0
  * @package		Blurb_Module
- * @author		Matt Grannary - mattgrannary.com
+ * @author		Matt Grannary - floatingcastles.com
  * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
